[gd_scene load_steps=12 format=4 uid="uid://cf08sm38s5w0b"]

[ext_resource type="Texture2D" uid="uid://8xswd8cqdah8" path="res://graphics/icons/refresh.svg" id="1"]
[ext_resource type="Script" path="res://multiplayer/lobby/LobbyList.gd" id="2"]
[ext_resource type="FontVariation" uid="uid://ccdyv65ubusey" path="res://fonts/default_font_black.tres" id="3"]
[ext_resource type="Script" path="res://menus/HBHovereableButton.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://cfnmpwyjlgoc8" path="res://graphics/icons/refresh-big.svg" id="5"]
[ext_resource type="Script" path="res://menus/UniversalScrollList.gd" id="6"]
[ext_resource type="Script" path="res://menus/HBSimpleMenu.gd" id="7"]
[ext_resource type="PackedScene" uid="uid://r6cc2m204dqw" path="res://menus/HBConfirmationWindow.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://by2ja0itsxao3" path="res://multiplayer/lobby/CreateLobbyPrompt.tscn" id="9_5f20n"]

[sub_resource type="Animation" id="1"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CenterContainer2/TextureRect2:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1e-05),
"update": 0,
"values": [180.0, 0.0, -180.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_skgb7"]
_data = {
"Nueva Animaci√≥n": SubResource("1")
}

[node name="LobbyListMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
theme_override_constants/margin_top = 35
theme_override_constants/margin_bottom = 35

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 28

[node name="LobbiesFoundLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3")

[node name="CreateLobbyMenu" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 2
theme_override_constants/separation = 9
script = ExtResource("7")

[node name="CreateLobbyButton" type="Button" parent="MarginContainer/VBoxContainer/CreateLobbyMenu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "Create"
script = ExtResource("4")

[node name="RefreshLobbyListButton" type="Button" parent="MarginContainer/VBoxContainer/CreateLobbyMenu"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
icon = ExtResource("1")
expand_icon = true
script = ExtResource("4")

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
script = ExtResource("6")
container_path = NodePath("VBoxContainer")
horizontal_step = 0
scroll_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/ScrollContainer/CenterContainer"]
layout_mode = 2
texture = ExtResource("5")
expand_mode = 1
stretch_mode = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/VBoxContainer/ScrollContainer/CenterContainer"]
libraries = {
"": SubResource("AnimationLibrary_skgb7")
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StatusPrompt" parent="." instance=ExtResource("8")]
layout_mode = 1
has_cancel = false
has_accept = false

[node name="ErrorPrompt" parent="." instance=ExtResource("8")]
layout_mode = 1
has_cancel = false
accept_text = "Okay"

[node name="KickedPrompt" parent="." instance=ExtResource("8")]
unique_name_in_owner = true
layout_mode = 1
has_cancel = false
text = "You were kicked from the lobby"
accept_text = "Okay"

[node name="CreateLobbyPrompt" parent="." instance=ExtResource("9_5f20n")]
unique_name_in_owner = true
visible = false
layout_mode = 1
grow_horizontal = 2
grow_vertical = 2
